--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="amz_create_new_amazon_account">Create new Amazon account</string>
     <string name="amz_conditions_of_use_privacy_notice">Conditions of Use Privacy Notice</string>
     <string name="amz_copyright">© 1996-2017, Amazon.com, Inc. or its affiliates</string>
-    <string name="amz_forgot_password_link">Forgot passord?</string>
+    <string name="amz_forgot_password_link">Forgot password?</string>
     <string name="amz_keep_me_sign_in">Keep me sign in</string>
     <string name="amz_details">Details</string>
     <string name="amz_new_to_amazon">New to Amazon?</string>
