--- a/assignment5/src/main/res/values/strings.xml
+++ b/assignment5/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="s_start_survey">Start Survey</string>
     <string name="s_survey">Survey</string>
     <string name="s_submit">Submit</string>
+    <string name="cart_view_cart">View Cart</string>
+    <string name="cart_add_to_cart">Add to Cart</string>
+    <string name="cart_is_empty">Cart is empty</string>
+    <string name="cart_home">Home</string>
+
 </resources>
