--- a/assignment3/src/main/res/values/strings.xml
+++ b/assignment3/src/main/res/values/strings.xml
@@ -19,9 +19,10 @@
     <string name="amz_sign_in_btn">Sign in</string>
     <string name="amz_create_new_amazon_account">Create new Amazon account</string>
     <string name="amz_conditions_of_use_privacy_notice">Conditions of Use Privacy Notice</string>
-    <string name="amz_copyright">© 1996-2017, Amazon.com, Inc. or its affiliates</string>
+    <string name="amz_copyright">© 1996–2017, Amazon.com, Inc. or its affiliates</string>
     <string name="amz_forgot_password_link">Forgot password?</string>
     <string name="amz_keep_me_sign_in">Keep me sign in</string>
     <string name="amz_details">Details</string>
     <string name="amz_new_to_amazon">New to Amazon?</string>
+    <string name="water_resource_name_hint">water resource name</string>
 </resources>
