--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="app_assignment5_1">Assignment5#1</string>
     <string name="app_assignment5_2">Assignment5#2</string>
     <string name="app_assignment6">Assignment6</string>
+    <string name="app_assignment7">Assignment7</string>
 </resources>
