- add assigment extra with Hilt, ViewModel, Repository and Compose.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="app_assignment5_2">Assignment5#2</string>
     <string name="app_assignment6">Assignment6</string>
     <string name="app_assignment7">Assignment7</string>
+    <string name="app_extra">Extra</string>
 </resources>
