--- a/assignment5/src/main/res/values/strings.xml
+++ b/assignment5/src/main/res/values/strings.xml
@@ -8,6 +8,6 @@
     <string name="cart_view_cart">View Cart</string>
     <string name="cart_add_to_cart">Add to Cart</string>
     <string name="cart_is_empty">Cart is empty</string>
-    <string name="cart_home">Home</string>
+    <string name="cart_details">Details</string>
 
 </resources>
